--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
 
     <div id="D-coll-3" class="coll-3">
-      <h2>I wana say you some thing</h2>
+      <h2>Naa unta onnu sollanum</h2>
     </div>
 
     <div id="D-coll-2" class="coll-2">
-      <h2>Wassup?</h2>
+      <h2>Idhu unnakaaga pannadhu</h2>
     </div>
 
     <div id="D-coll" class="coll">
